--- a/css/chosen.css
+++ b/css/chosen.css
@@ -33,20 +33,25 @@
   overflow: hidden;
   padding: 0 0 0 8px;
   height: 23px;
-  border: 1px solid #aaa;
+  /*border: 1px solid #aaa; */
   border-radius: 5px;
-  background-color: #fff;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #ffffff), color-stop(50%, #f6f6f6), color-stop(52%, #eeeeee), color-stop(100%, #f4f4f4));
+  background-color: #292826;
+ /* background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #ffffff), color-stop(50%, #f6f6f6), color-stop(52%, #eeeeee), color-stop(100%, #f4f4f4));
   background: -webkit-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
   background: -moz-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
   background: -o-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
   background: linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
+  */
   background-clip: padding-box;
-  box-shadow: 0 0 3px white inset, 0 1px 1px rgba(0, 0, 0, 0.1);
-  color: #444;
+ /* box-shadow: 0 0 3px white inset, 0 1px 1px rgba(0, 0, 0, 0.1);*/
+  color: #fff;
   text-decoration: none;
   white-space: nowrap;
   line-height: 24px;
+  
+  font-family:"museo",Helvetica Neue,Helvetica,Arial,sans-serif;
+	font-weight:300;
+	font-size:16px;
 }
 .chzn-container-single .chzn-default {
   color: #999;
@@ -291,17 +296,17 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 .chzn-container-active.chzn-with-drop .chzn-single {
-  border: 1px solid #aaa;
+  border: 1px solid #000;
   -moz-border-radius-bottomright: 0;
   border-bottom-right-radius: 0;
   -moz-border-radius-bottomleft: 0;
   border-bottom-left-radius: 0;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #eeeeee), color-stop(80%, #ffffff));
+  /*background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #eeeeee), color-stop(80%, #ffffff));
   background-image: -webkit-linear-gradient(#eeeeee 20%, #ffffff 80%);
   background-image: -moz-linear-gradient(#eeeeee 20%, #ffffff 80%);
   background-image: -o-linear-gradient(#eeeeee 20%, #ffffff 80%);
-  background-image: linear-gradient(#eeeeee 20%, #ffffff 80%);
-  box-shadow: 0 1px 0 #fff inset;
+  background-image: linear-gradient(#eeeeee 20%, #ffffff 80%); */
+  box-shadow: 0 1px 0 #2D2D2D inset;
 }
 .chzn-container-active.chzn-with-drop .chzn-single div {
   border-left: none;
